Fix table.list overflow-problem

--- a/app/assets/stylesheets/puavo2013/base_styles/tables.styl
+++ b/app/assets/stylesheets/puavo2013/base_styles/tables.styl
@@ -41,6 +41,10 @@ table
       padding-bottom 10px
       padding-top 10px
       word-wrap break-word
+    td
+      word-break break-all
+    .table-actions
+      word-break normal
 
 .show_user
   td
